# rag-in-a-box

./: README.md  compose.yaml  rag-in-a-box.code-workspace
design-docs/: Design Doc - Document Chunking for Ingestion.md  Design Doc - Ingestion Status.md
encoder/: Dockerfile  embed_server.py  main.py  pyproject.toml
ingest-worker/: Dockerfile  ingestion_worker.py  pyproject.toml
ingestion-api/: Dockerfile  ingestion_worker.py  main.py  pyproject.toml
ingestion-api-integ-tests/: pyproject.toml
ingestion-api-integ-tests/src/ingestion_api_integ_tests/: main.py  models.py
orchestrator/: Dockerfile  main.py  pyproject.toml
scripts/: add_rag_context.py  pyproject.toml
