[project]
name = "ingest-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.7.1",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "qdrant-client>=1.15.0",
    "tenacity>=9.1.2",
    "types-pika>=1.2.0b1",
]
