[project]
name = "ingestion-api-integ-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
    "sqlalchemy>=2.0.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion_api_integ_tests"]

[tool.pytest.ini_options]
testpaths = [
    "src/ingestion_api_integ_tests/*"
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(levelname)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
