[project]
name = "ingestion-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "fastembed>=0.7.1",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "qdrant-client>=1.14.3",
    "types-pika>=1.2.0b1",
]
